[gd_scene load_steps=7 format=3 uid="uid://crskrawyrqrl5"]

[ext_resource type="Texture2D" uid="uid://cwotdjse3rwyv" path="res://graphics/enemies/scout.png" id="1_3pe78"]
[ext_resource type="Script" path="res://scenes/enimies/scout.gd" id="1_yiom1"]
[ext_resource type="Shader" path="res://scenes/enimies/scout.gdshader" id="2_ggdvt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xhsdd"]
shader = ExtResource("2_ggdvt")
shader_parameter/color = Color(0.883631, 0.350442, 0.383701, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_685nd"]
radius = 47.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gmh4i"]
radius = 801.455

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_yiom1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xhsdd")
position = Vector2(39, 27)
rotation = 1.5708
texture = ExtResource("1_3pe78")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_685nd")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_gmh4i")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(135, 11)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(126, -27)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="InvulnerabilityTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
